--- a/mh_chatbot2/db.yaml
+++ b/mh_chatbot2/db.yaml
@@ -1,4 +1,4 @@
-mysql_host: 'localhost'
-mysql_user: 'root'
-mysql_password: 'heera2202'
-mysql_db: 'flaskapp'
+mysql_host: "localhost"
+mysql_user: "root"
+mysql_password: "CowTheGreat"
+mysql_db: "Mental"
